Fix detach icon size to not overlap other player controls

--- a/src/public/detach.scss
+++ b/src/public/detach.scss
@@ -53,5 +53,5 @@
   float: right;
   border: 0;
   height: 100%;
-  width: 6%;
+  width: 22px;
 }
